--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
-    "build": "rm -rf ../../../public/assets/app/{js,css,img} && vue-cli-service build --no-clean"
+    "build": "rm -rf ./dist/{js,css,img} && vue-cli-service build --no-clean"
   },
   "dependencies": {
     "axios": "^0.19.2",
